--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
     <div id="app" class="wrapper">
         <div class="title flex">
-            <h1>Can you complete the list? Are you up for the challenge? Name all the 50 <em>United States of America</em> 🇺🇸 in alphabetical order!</h1>
+            <h1>Can you complete the list? Are you up for the challenge? Name all the 50 <em>United States of America</em> in alphabetical order! 🇺🇸</h1>
         </div>
         <div class="list flex">
             <ol v-if="usList.length > 0" class="flex">
-                <li v-for="(state, index) in usList"><a href="https://en.wikipedia.org/wiki/U.S._state">{{index + 1}} &#8594; {{state}}</a> ✔️<a href="#"><span @click="deleteItemList">❌</span></a></li>
+                <li v-for="(state, index) in usList"><a href="https://en.wikipedia.org/wiki/U.S._state">{{index + 1}} &#8594; {{state}}</a> ✔️<a href="#" @click="deleteItemList(index)">❌</a></li>
             </ol>            
         </div>
         <div class="input-box flex">
